# ml-analyzed-microservice

./: Dockerfile  README.md  docker-compose.yml  dotenv.template  pyproject.toml
ml_analyzed_service/: bin_store.py  main.py  processor.py
